# Embedded-ML-Assignment

./: CMakeLists.txt  README.md
src/: Main.cpp
